# sidecar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  env-init.sh
Algorithms/: Algorithm.cc  Algorithm.h  AlgorithmTestBase.cc  AlgorithmTestBase.h  AlgorithmTests.cc  Algorithm_DefaultsTemplate.h  Algorithm_Template.axml  Algorithm_Template.cc  Algorithm_Template.h  Algorithm_TestTemplate.cc  CMakeLists.txt  CPIAlgorithm.cc  CPIAlgorithm.h  ChannelBuffer.cc  ChannelBuffer.h  Controller.cc  Controller.h  ControllerStatus.cc  ControllerStatus.h  ManyInAlgorithm.cc  ManyInAlgorithm.h  ManyInCPIAlgorithm.cc  ManyInCPIAlgorithm.h  PastBuffer.cc  PastBuffer.h  PastBufferTests.cc  ProcessingStat.cc  ProcessingStat.h  Processor.h  Recorder.cc  Recorder.h  RemoteControllerBase.cc  RemoteControllerBase.h  ShutdownMonitor.cc  ShutdownMonitor.h  SynchronizedBuffer.h  SynchronizedBufferTests.cc  Utils.cc  Utils.h  algdump.sh  (+1 more)
Algorithms/ABTracker/: ABTracker.cc  ABTracker.h  ABTrackerTest.cc  CMakeLists.txt  Track.cc  Track.h  UnitVector.cc  UnitVector.h  UnitVectorTest.cc  Vector.cc  Vector.h  VectorTest.cc
Algorithms/Alarmer/: Alarmer.axml  Alarmer.cc  Alarmer.h
Algorithms/BinaryOp/: BinaryOp.axml  BinaryOp.cc  BinaryOp.h  BinaryOpTest.cc  BinaryOp_defaults.h  CMakeLists.txt
Algorithms/BugCollector/: BugCollector.axml  BugCollector.cc  (+5 more)
Configuration/: CMakeLists.txt  ConfigurationTests.cc  Loader.cc  Loader.h  RadarConfigFileWatcher.cc  RadarConfigFileWatcher.h  RunnerConfig.cc  RunnerConfig.h
GUI/: AppBase.cc  AppBase.h  BoolSetting.cc  BoolSetting.h  BugPlotEmitterSettings.cc  BugPlotEmitterSettings.h  CLUT.cc  CLUT.h  CLUTSetting.cc  CLUTSetting.h  CLUTTests.cc  CMakeLists.txt  ChannelGroup.cc  ChannelGroup.h  ChannelImaging.cc  ChannelImaging.h  ChannelInfoWidget.cc  ChannelInfoWidget.h  ChannelInfoWidget.ui  ChannelMenu.cc  ChannelMenu.h  ChannelSelectorWindow.cc  ChannelSelectorWindow.h  ChannelSelectorWindow.ui  ChannelSetting.cc  ChannelSetting.h  Color.h  ColorButtonSetting.cc  ColorButtonSetting.h  ColorButtonWidget.cc  ColorButtonWidget.h  ColorMapWidget.cc  ColorMapWidget.h  ColorMapWidget.ui  ControlsWidget.cc  ControlsWidget.h  ControlsWindow.cc  ControlsWindow.h  ControlsWindow.ui  CursorWidget.cc  (+178 more)
GeoStars/: CMakeLists.txt  geoAstro.c  geoEllips.c  geoMag.c  geoMagTest.c  geoPoint.c  geoStars.h  geoStarsExcel.h  geoTest.c
IO/: AutoCloseFileDescriptor.h  ByteOrder.h  CDRStreamable.cc  CDRStreamable.h  CMakeLists.txt  Channel.cc  Channel.h  ClearStatsRequest.h  ClientSocketReaderTask.cc  ClientSocketReaderTask.h  ClientSocketWriterTask.cc  ClientSocketWriterTask.h  ControlMessage.cc  ControlMessage.h  ControlMessageTests.cc  DataPublisher.cc  DataPublisher.h  DataSubscriber.cc  DataSubscriber.h  Decoder.cc  Decoder.h  Encoder.h  FileModuleTests.cc  FileReaderTask.cc  FileReaderTask.h  FileTaskTests.cc  FileWriterTask.cc  FileWriterTask.h  GatherWriter.cc  GatherWriter.h  Growl.cc  Growl.h  GrowlTests.cc  IOTask.cc  IOTask.h  IOTests.cc  IndexMaker.cc  IndexMaker.h  LineBuffer.cc  LineBuffer.h  (+92 more)
Logger/: CMakeLists.txt  ClockSource.cc  ClockSource.h  Configurator.cc  Configurator.h  ConfiguratorFile.cc  ConfiguratorFile.h  Exceptions.h  FileWriter.cc  Formatters.cc  Formatters.h  Log.cc  Log.h  LogStreamBuf.cc  LogStreamBuf.h  LogTests.cc  Msg.h  Priority.cc  Priority.h  RemoteSyslogWriter.cc  RollingWriter.cc  StreamWriter.cc  SyslogWriter.cc  Writers.h  doxygen.h
Messages/: Attributes.cc  Attributes.h  BinaryVideo.cc  BinaryVideo.h  BugPlot.cc  BugPlot.h  CMakeLists.txt  CircularBuffer.cc  CircularBuffer.h  CircularBufferTests.cc  Complex.cc  Complex.h  Decimator.h  Extraction.cc  Extraction.h  ExtractionsTests.cc  GUID.cc  GUID.h  GUIDTest.cc  Header.cc  Header.h  LoaderRegistry.cc  LoaderRegistry.h  LoaderRegistryTest.cc  Message.cc  Message.h  MessageImpl.h  MetaTypeInfo.cc  MetaTypeInfo.h  MetaTypeInfoTest.cc  PRIMessage.cc  PRIMessage.h  PRIMessageTest.cc  RadarConfig.cc  RadarConfig.h  RadarConfigFileWatcher.cc  RadarConfigFileWatcher.h  RadarConfigTest.cc  RawVideo.cc  RawVideo.h  (+16 more)
Parameter/: CMakeLists.txt  Monitor.h  MonitorTests.cc  Parameter.cc  Parameter.h  ParameterTest.cc  doxygen.h
Runner/: App.cc  App.h  CMakeLists.txt  LogCollector.cc  LogCollector.h  RemoteController.cc  RemoteController.h  RunnerStatus.cc  RunnerStatus.h  StatusEmitter.cc  StatusEmitter.h  StreamBuilder.cc  StreamBuilder.h  doxygen.h  main.cc
Threading/: CMakeLists.txt  DataQueue.cc  DataQueue.h  DataQueueTest.cc  Threading.cc  Threading.h  ThreadingTests.cc  doxygen.h
Time/: CMakeLists.txt  TimeStamp.cc  TimeStamp.h  TimeStampRange.cc  TimeStampRange.h  TimeStampRangeSet.cc  TimeStampRangeSet.h  TimeStampTest.cc  doxygen.h
UnitTest/: CMakeLists.txt  ProcSuite.h  RunResults.cc  RunResults.h  Suite.cc  Suite.h  TestObj.cc  TestObj.h  TestTest.cc  UnitTest.h  doxygen.h
Utils/: AtomicOp.h  AzimuthSweep.cc  AzimuthSweep.h  AzimuthSweepTest.cc  BeamWidthFilter.cc  BeamWidthFilter.h  CMakeLists.txt  CmdLineArgs.cc  CmdLineArgs.h  Exception.cc  Exception.h  FilePath.cc  FilePath.h  FilePathTest.cc  FileWatcher.cc  FileWatcher.h  FileWatcherTest.cc  Format.cc  Format.h  FormatTests.cc  IO.cc  IO.h  MD5.cc  MD5.h  MD5Tests.cc  OrderedIndex.h  Pluralist.h  Pool.cc  Pool.h  PoolTest.cc  PowerOf2Test.cc  QuickSelect.h  QuickSelectTest.cc  QuickSort.h  QuickSortTest.cc  RingBuffer.cc  RingBuffer.h  RingBufferTest.cc  RunningAverage.cc  RunningAverage.h  (+14 more)
XMLRPC/: CMakeLists.txt  XmlRpc.h  XmlRpcClient.cpp  XmlRpcClient.h  XmlRpcDispatch.cpp  XmlRpcDispatch.h  XmlRpcException.h  XmlRpcServer.h  XmlRpcServerConnection.cpp  XmlRpcServerConnection.h  XmlRpcServerMethod.h  XmlRpcSocket.cpp  XmlRpcSocket.h  XmlRpcSource.h  XmlRpcUtil.h  XmlRpcValue.cpp  XmlRpcValue.h  base64.h  doxygen.h
Zeroconf/: ACEMonitor.cc  ACEMonitor.h  ASIOMonitor.cc  ASIOMonitor.h  ASIOZeroconfTests.cc  Browser.cc  Browser.h  CMakeLists.txt  Monitor.h  Publisher.cc  Publisher.h  ResolvedEntry.cc  ResolvedEntry.h  ServiceEntry.cc  ServiceEntry.h  Transaction.cc  Transaction.h  ZeroconfTests.cc  doxygen.h
(+8216 files in other folders)
